apps/demo45/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo45
  namespace: demo45
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo45
  template:
    metadata:
      labels:
        app: demo45
    spec:
      containers:
        - name: demo45
          image: 490529426410.dkr.ecr.us-east-1.amazonaws.com/demo45:61adecab8915a4cc726f37b2034236ad6b68bb81
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 512Mi
