apps/demo45/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo45
  namespace: demo45
spec:
  selector:
    app: demo45
  ports:
    - port: 80
      targetPort: 8080
